@@ -9,24 +9,44 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "MelonLoader", "MelonLoader\
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MelonLoader.ModHandler", "MelonLoader.ModHandler\MelonLoader.ModHandler.csproj", "{3C4056AB-1D07-43FC-A93D-0AA72446DA03}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TestMod", "TestMod\TestMod.csproj", "{788BC472-59F7-46F6-B760-65C18BA74389}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Any CPU = Debug|Any CPU
 		Debug|x64 = Debug|x64
+		Release|Any CPU = Release|Any CPU
 		Release|x64 = Release|x64
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{4A01315C-109C-469A-97DD-F9BD8A6DDED9}.Debug|Any CPU.ActiveCfg = Debug|x64
 		{4A01315C-109C-469A-97DD-F9BD8A6DDED9}.Debug|x64.ActiveCfg = Debug|x64
 		{4A01315C-109C-469A-97DD-F9BD8A6DDED9}.Debug|x64.Build.0 = Debug|x64
+		{4A01315C-109C-469A-97DD-F9BD8A6DDED9}.Release|Any CPU.ActiveCfg = Release|x64
 		{4A01315C-109C-469A-97DD-F9BD8A6DDED9}.Release|x64.ActiveCfg = Release|x64
 		{4A01315C-109C-469A-97DD-F9BD8A6DDED9}.Release|x64.Build.0 = Release|x64
+		{88DCBE83-3D23-48E3-BA8F-8DEC31A91442}.Debug|Any CPU.ActiveCfg = Debug|x64
 		{88DCBE83-3D23-48E3-BA8F-8DEC31A91442}.Debug|x64.ActiveCfg = Debug|x64
 		{88DCBE83-3D23-48E3-BA8F-8DEC31A91442}.Debug|x64.Build.0 = Debug|x64
+		{88DCBE83-3D23-48E3-BA8F-8DEC31A91442}.Release|Any CPU.ActiveCfg = Release|x64
 		{88DCBE83-3D23-48E3-BA8F-8DEC31A91442}.Release|x64.ActiveCfg = Release|x64
 		{88DCBE83-3D23-48E3-BA8F-8DEC31A91442}.Release|x64.Build.0 = Release|x64
+		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Debug|x64.ActiveCfg = Debug|Any CPU
 		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Debug|x64.Build.0 = Debug|Any CPU
+		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Release|Any CPU.Build.0 = Release|Any CPU
 		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Release|x64.ActiveCfg = Release|Any CPU
 		{3C4056AB-1D07-43FC-A93D-0AA72446DA03}.Release|x64.Build.0 = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Debug|Any CPU.ActiveCfg = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Debug|Any CPU.Build.0 = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Debug|x64.ActiveCfg = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Debug|x64.Build.0 = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Release|Any CPU.Build.0 = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Release|x64.ActiveCfg = Release|Any CPU
+		{788BC472-59F7-46F6-B760-65C18BA74389}.Release|x64.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
