@@ -1,0 +1,17 @@
+﻿using System.Resources;
+using System.Reflection;
+using System.Runtime.InteropServices;
+
+[assembly: AssemblyTitle(TestMod.FileInfo.Name)]
+[assembly: AssemblyDescription("")]
+[assembly: AssemblyConfiguration("")]
+[assembly: AssemblyCompany(TestMod.FileInfo.Company)]
+[assembly: AssemblyProduct(TestMod.FileInfo.Name)]
+[assembly: AssemblyCopyright("Created by " + TestMod.FileInfo.Author)]
+[assembly: AssemblyTrademark(TestMod.FileInfo.Company)]
+[assembly: AssemblyCulture("")]
+[assembly: ComVisible(false)]
+[assembly: Guid("3a25f309-f002-4b35-a6f0-6b31f9a9c362")]
+[assembly: AssemblyVersion(TestMod.FileInfo.Version)]
+[assembly: AssemblyFileVersion(TestMod.FileInfo.Version)]
+[assembly: NeutralResourcesLanguage("en")]
